--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -68,8 +68,10 @@ jobs:
    - name: Azure login
      uses: azure/login@v2
      with:
-      creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
- 
+      client-id: ${{ secrets.AZURE_CLIENT_ID }}
+      subscription-id: ${{ secrets.AZURE_CLIENT_SECRET }}
+      tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+    
    - name: Deploy to Azure Web App
      uses: azure/webapps-deploy@v3
      with:
